--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-bitsandbytes==0.42.0
-peft==0.8.2
-trl==0.7.10
-accelerate==0.27.1
-transformers==4.38.0
+bitsandbytes
+peft
+trl
+accelerate
+transformers
+datasets
